--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -35,6 +35,12 @@
       ],
       "@app/storage/*": [
         "libs/storage/src/*"
+      ],
+      "@app/redis": [
+        "libs/redis/src"
+      ],
+      "@app/redis/*": [
+        "libs/redis/src/*"
       ]
     }
   }
