--- a/back/package.json
+++ b/back/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^6.5.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
